
* GITHUB#13517: Allow configuring the search concurrency on LogDocMergePolicy
  and LogByteSizeMergePolicy via a new #setTargetConcurrency setter.
  (Adrien Grand)

* GITHUB#13568: Add sandbox facets module to compute facets while collecting. (Egor Potemkin, Shradha Shankar)

* GITHUB#13678: Add support JDK 23 to the Panama Vectorization Provider. (Chris Hegarty)

Improvements
---------------------

* GITHUB#13548: Refactor and javadoc update for KNN vector writer classes. (Patrick Zhai)

* GITHUB#13562: Add Intervals.regexp and Intervals.range methods to produce  IntervalsSource
  for regexp and range queries. (Mayya Sharipova)

* GITHUB#13625: Remove BitSet#nextSetBit code duplication. (Greg Miller)

* GITHUB#13285: Early terminate graph searches of AbstractVectorSimilarityQuery to follow timeout set from
  IndexSearcher#setTimeout(QueryTimeout). (Kaival Parikh)
  
* GITHUB#13633: Add ability to read/write knn vector values to a MemoryIndex. (Ben Trent)

* GITHUB#12627: patch HNSW graphs to improve reachability of all nodes from entry points

* GITHUB#13201: Better cost estimation on MultiTermQuery over few terms. (Michael Froh)

Optimizations
---------------------

* GITHUB#13439: Avoid unnecessary memory allocation in PackedLongValues#Iterator. (Zhang Chao)

* GITHUB##13425: Rewrite SortedNumericDocValuesRangeQuery to MatchNoDocsQuery when the upper bound is smaller than the
  lower bound. (Ioana Tagirta)

* GITHUB#13322: Implement Weight#count for vector values in the FieldExistsQuery. (Pan Guixin)

* GITHUB#13454: MultiTermQuery returns null ScoreSupplier in cases where
  no query terms are present in the index segment (Mayya Sharipova)

* GITHUB#13431: Replace TreeMap and use compiled Patterns in Japanese UserDictionary. (Bruno Roustant)

* GITHUB#12941: Don't preserve auxiliary buffer contents in LSBRadixSorter if it grows. (Stefan Vodita)

* GITHUB#13175: Stop double-checking priority queue inserts in some FacetCount classes. (Jakub Slowinski)
