@@ -1,0 +1,34 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.apache.lucene.demo.facet;
+
+import java.util.List;
+import org.apache.lucene.facet.range.DynamicRangeUtil;
+import org.apache.lucene.tests.util.LuceneTestCase;
+import org.junit.Test;
+
+public class TestDynamicRangeFacetsExample extends LuceneTestCase {
+  @Test
+  public void testExample() throws Exception {
+    List<DynamicRangeUtil.DynamicRangeInfo> res = new DynamicRangeFacetsExample().runSearch();
+    assertEquals(
+        List.of(
+            new DynamicRangeUtil.DynamicRangeInfo(2, 137, 63, 75, 69d),
+            new DynamicRangeUtil.DynamicRangeInfo(3, 83, 79, 96, 86)),
+        res);
+  }
+}
